--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Inventory Management System - TDK Philippines</title>
+    <title>AI Inventory Management System - Company A</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
@@ -34,7 +34,7 @@
                     <div class="fw-bold text-white" id="lastUpdate">--:--:--</div>
                 </div>
                 <span class="badge bg-warning text-dark px-3 py-2">
-                    <i class="fas fa-industry me-1"></i>TDK Philippines
+                    <i class="fas fa-industry me-1"></i>Company A
                 </span>
             </div>
         </div>
