fix: Disable CSV import on Vercel serverless (filesystem limitation)
- Use /tmp directory for uploads on Vercel
- Hide CSV import button on Vercel deployment
- Show informative message when CSV import attempted on Vercel
- Conditionally load CSV routes only in local environment
- Update documentation about Vercel limitations
- CSV import fully functional in local development

--- a/public/index.html
+++ b/public/index.html
@@ -242,7 +242,7 @@
                             </select>
                         </div>
                         <div class="col-md-3 text-end">
-                            <button class="btn btn-sm btn-success me-1" onclick="app.showImportModal()" title="Import CSV">
+                            <button class="btn btn-sm btn-success me-1" id="importCsvBtn" onclick="app.showImportModal()" title="Import CSV">
                                 <i class="fas fa-file-upload me-1"></i>Import CSV
                             </button>
                             <button class="btn btn-sm btn-outline-secondary me-1" onclick="app.refreshData()" title="Refresh Data">
